--- a/app/views/shared/_task.html.erb
+++ b/app/views/shared/_task.html.erb
@@ -1,4 +1,4 @@
-<div class="task">
+<div class="task col-xs-12">
   <span class="description">
     Description:
     <%= link_to task_path(task.id) do %>
@@ -8,6 +8,7 @@
   <span class="completed">
     <%= task.completion_date ? "Completed: #{task.completion_date.strftime("%Y-%m-%d")}" : nil %>
   </span>
+  <div class="row">
   <div class="links">
     <span class="link">
       <%= link_to 'Delete Task', task_path(task.id), method: 'delete' %>
@@ -15,5 +16,6 @@
     <span class="link">
       <%= link_to 'Update Task', edit_task_path(task.id) %>
     </span>
+  </div>
   </div>
 </div>
