--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,18 @@
     </ul>
   </div>
   <div class="container">
-    <%= yield %>
+    <div class="row">
+      <% flash.each do |type, msg| %>
+        <div class="alert alert-block alert-<%= type %>">
+        <%= msg %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <%= yield %>
+    </div>
   </div>
 </body>
 </html>
