--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 <div class="form-group col-md-6">
   <%= f.label :description, class: 'form-label' %>
-  <%= f.text_field :description, class: 'form-control' %>
+  <%= f.text_field :description, class: 'form-control', required: "required" %>
 </div>
 </div>
 <div class="row">
