--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,3 +1,12 @@
+<div class="container">
+  <div class="row">
+    <% task.errors.full_messages.each do |error| %>
+      <div class="alert alert-block alert-danger">
+      <%= error %>
+      </div>
+    <% end %>
+  </div>
+</div>
 <%= form_for (task) do |f| %>
 <div class="row">
 <div class="form-group col-md-6">
