--- a/app/views/shared/_task.html.erb
+++ b/app/views/shared/_task.html.erb
@@ -8,6 +8,9 @@
   <span class="due-date">
     <%= is_completed(task) %>
   </span>
+  <span class="priority">
+    <%= priority(task) %>
+  </span>
   <div class="row">
   <div class="links">
     <span class="link">
